--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <!--header section start-->
     <header>
         <div class="user">
-            <img src="img/Me.jpg" alt="">
+            <img src="Me.jpg" alt="">
             <h3 class = "name">Ninad Karkhanis</h3>
             <p class = "desc">Front End Developer</p>
         </div>
@@ -58,7 +58,7 @@
         <h3> <span> name :</span> ninad karkhanis</h3>
         <h3> <span> age :</span> 19</h3>
         <h3> <span> qualification :</span> BCA</h3>
-        <a href="/img/download.png"><button class="btn"> download CV <i class="fas fa-download"></i></button></a>
+        <a href="download.png"><button class="btn"> download CV <i class="fas fa-download"></i></button></a>
     </div>
 
     <div class="counter">
@@ -114,22 +114,22 @@
 
     <div class="box-container">
         <div class="box">
-            <img src="img/port.jpg" alt="">
+            <img src="port.jpg" alt="">
         </div>
         <div class="box">
-            <img src="img/port.jpg" alt="">
+            <img src="port.jpg" alt="">
         </div>
         <div class="box">
-            <img src="img/port.jpg" alt="">
+            <img src="port.jpg" alt="">
         </div>
         <div class="box">
-            <img src="img/port.jpg" alt="">
+            <img src="port.jpg" alt="">
         </div>
         <div class="box">
-            <img src="img/port.jpg" alt="">
+            <img src="port.jpg" alt="">
         </div>
         <div class="box">
-            <img src="img/port.jpg" alt="">
+            <img src="port.jpg" alt="">
         </div>
     </div>
 </section>
