--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     <div class="box">
         <i class="fas fa-graduation-cap"></i>
         <span>2024</span>
-        <h3>Bachelors's in Computer Application</h3>
+        <h3>Bachelor's in Computer Application</h3>
         <p>Somaiya Vidyavihar University</p>
 
     </div>
